--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Invention-of-a-New-Religion_2510
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Chamberlain, Basil Hall
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/947
     wikipedia: http://en.wikipedia.org/wiki/Basil_Hall_Chamberlain
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/2510#The-Invention-of-a-New-Religion
 gutenberg_issued: '2001-02-01'
 gutenberg_type: Text
 identifiers:
